[package]
name = "WikiRacer"
version = "0.1.0"
edition = "2021"




[dependencies]
curl = "0.4.46"
priority-queue = "2.0.3"
actix-web = "4"
reqwest = {version = "0.12.4", features = ["blocking"]}
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"
actix-cors = "0.7.0"
